--- a/templates/job.html.twig
+++ b/templates/job.html.twig
@@ -22,13 +22,13 @@
 <section>
     <div class="page-content">
         <h2>Postes ouverts</h2>
-        <p>Nous sommes ravis de recevoir votre candidature pour les postes suivants. Les candidatures spontanées sont également appréciées. Faites preuve d'enthousiasme et un soupçon de culture web.</p>
+        <p>Nous sommes ravis de recevoir votre candidature pour le poste suivant. Les candidatures spontanées sont également appréciées. Faites preuve d'enthousiasme et un soupçon de culture web.</p>
         <ul>
             <li>
-                <h3><a href="{{ path('job_show', { slug: 'digital-project-manager' }) }}">Digital project manager</a></h3>
+                <h3><del>Digital project manager</del></h3>
             </li>
             <li>
-                <h3><a href="{{ path('job_show', { slug: 'web-developer' }) }}">Web Developer (60%)</a></h3>
+                <h3><a href="{{ path('job_show', { slug: 'web-developer' }) }}">Web Developer (80%)</a></h3>
             </li>
         </ul>
 
