--- a/templates/job/digital-project-manager.html.twig
+++ b/templates/job/digital-project-manager.html.twig
@@ -26,9 +26,10 @@
 {% block content %}
 <section>
     <div class="page-content">
-        <h2>En tant que chef de projet, tu seras le maître du temps et des ressources; Impliqué pendant toute la durée du projet pour sa gestion et la relation avec le client.
+        <h2>Nous avons trouvé la perle rare, le poste n'est plus à pourvoir. Merci à tous !</h2>
+        <h2><del>En tant que chef de projet, tu seras le maître du temps et des ressources; Impliqué pendant toute la durée du projet pour sa gestion et la relation avec le client.</del>
         </h2>
-
+<del>
         <h3>En bref, le profil recherché</h3>
         <p>Un gestionnaire de projets digitaux passionné par les nouvelles technologies et la communication pour un poste à 100%. H/F – 25 ans / 35 ans – Suisse, Permis B - C</p>
 
@@ -69,8 +70,8 @@
         </p>
 
 <h3>Soumission du dossier</h3>
-        <p>Alors, si tu te reconnais dans cette description, contacte-nous sans tarder soit via :</p>
-
+        {# <p>Alors, si tu te reconnais dans cette description, contacte-nous sans tarder soit via :</p> #}
+{# 
         <script type="IN/Apply"
            data-logo="http://antistatique.net/assets/img/logo-a.png"
            data-themeColor="#d40b6b"
@@ -83,9 +84,11 @@
            data-jobId="PROJECT-1"
         ></script>
 
+ #}
+
         <p>Ou en envoyant un mail de motivation, ton CV (profil LinkedIn), l’url de ton site, ton twitter par email à <a href="mailto:job@antistatique.net?subject=Je%20g%C3%A8re%20les%20projets%20comme%20un%20chef%2C%20engagez-moi%20%21">job@antistatique.net</a>.
         </p>
-        <p>Les dossiers envoyés par poste ne seront pas traités.</p>
+        <p>Les dossiers envoyés par poste ne seront pas traités.</p></del>
     </div>
 </section>
 {% endblock %}
