--- a/templates/en/job/web-developer.html.twig
+++ b/templates/en/job/web-developer.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}{{ 'job.title' | trans }} - Web Developer (80%){% endblock %}
 
-{% block meta_description%}Open job position for a Symfony2 Web Developer in Lausanne (Geneva area), Switzerland{% endblock %}
+{% block meta_description%}Job de développeur web à Lausanne, Suisse. Dans une chouette agence.{% endblock %}
 {% block head_scripts %}
     <script src="//platform.linkedin.com/in.js" type="text/javascript">
         api_key: lj5b50hfde72
@@ -18,7 +18,7 @@
     <section>
         <h1 class="title-separation magenta-sep">
             <span></span>
-            Web Developer (80%)
+            Web Developer (70% - 100%)
         </h1>
     </section>
 </div>
@@ -27,56 +27,58 @@
 {% block content %}
 <section>
     <div class="page-content">
-        <h2>En tant que développeur web, tu auras la charge de soutenir notre équipe de développement. Il s’agit d’un poste à temps partiel.</h2>
+        <h2>We are looking for a Symfony developer to join our team </h2>
 
-        <h3>En bref, le profil recherché</h3>
-
-        <p>Un/Une jeune développeur web passionné par les nouvelles technologies et la communication pour un poste à temps partiel (à discuter). H/F – 19 ans / 35 ans.</p>
-
-        <h3>Formation et connaissances</h3>
+        <h3>What we are offering</h3>
         <ul>
-            <li>Formation dans le domaine de l’informatique</li>
-            <li>Diplôme universitaire ou HES (ou équivalent)</li>
-            <li>Expérience dans le développement web de minimum 1 ans</li>
-            <li>Très bonnes connaissances des nouvelles technologies web</li>
-            <li>Bonnes connaissances de PHP5</li>
-            <li>Connaissance du framework Symfony</li>
-            <li>Bonnes connaissances des base de données</li>
-            <li>Bonne connaissance du Javascript</li>
-            <li>Connaissances HTTP, REST, CSS, HTML</li>
-            <li>Bonne maîtrise de l’anglais</li>
-            <li>Connaissance de l’allemand, un plus</li>
-            <li>Maitrise des outils de versionning (git / subversion)</li>
+            <li>Varied and innovative projects</li>
+            <li>Time for working on Open Source projects</li>
+            <li>A budget for attending conferences</li>
+            <li>A great café, Redbull and fruits</li>
+            <li>A table-tennis table for playing with colleagues</li>
         </ul>
 
-        <h3>Tâches principales</h3>
-        <h4>Développement web</h4>
+        <h3>Main Responsibilities</h3>
+        <h4>Web development</h4>
         <ul>
-            <li>Développement PHP 5 avec le framework Symfony 2</li>
-            <li>Intégration HTML / CSS / LESS</li>
-            <li>Développement sous Drupal</li>
+            <li>PHP 5 development using the Symfony 2 framework</li>
+            <li>Javascript development</li>
+            <li>Development using Drupal</li>
         </ul>
 
-
-        <h3>Exigences sociales et compétences personnelles</h3>
+        <h3>Qualifications and skills</h3>
         <ul>
-            <li>Méthodique, rigoureux et organisé</li>
-            <li>Esprit de synthèse et d'analyse</li>
-            <li>Envie d’apprendre et de se perfectionner</li>
+            <li>Undergraduate university degree or equivalent higher education qualification</li>
+            <li>Minimum one year of web development experiencea</li>
+            <li>In-depth knowledge of new web technologies</li>
+            <li>Knowledge of Symfony 2 framework</li>
+            <li>Extensive knowledge of Javascript</li>
+            <li>Good knowledge of databases</li>
+            <li>Knowledge of HTTP and REST</li>
+            <li>Good level of French and English</li>
+            <li>Knowledge of German would be an advantage</li>
+            <li>Familiarity working with version control tools (git / subversion)</li>
         </ul>
 
-        <h3>Passion du web</h3>
-        <p>Être prêt à participer à notre veille technologique et au partage de connaissances (Rédaction d'articles du blog, présentations, animation de séminaires, etc).</p>
+        <h3>Requirements and personal skills</h3>
+        <ul>
+            <li>Github account holder</li>
+            <li>Curious by nature and attentive to the needs of users</li>
+        </ul>
+
+        <h3>A passion for web culture and technologies</h3>
+        <p>Help us to keep a constant eye on developments in technology and participate in knowledge-sharing (writing blog articles and presentations, running seminars etc.).</p>
 
         <h3>Antistatique</h3>
-        <p>Antistatique est une agence digitale de 7 personnes basée à Lausanne, en Suisse.
-            Nous accompagnons nos clients dans la réalisation de leur communication web, application mobile, e-commerce et dans la mise en place de stratégies e-marketing.
+        <p>
+            Antistatique is a digital agency based in Lausanne, Switzerland. It is made up of seven people (four developers, one designer, one project manager and one digital strategist). We support our clients in managing their web presence, mobile applications, e-commerce and implementation of e-marketing strategies.
         </p>
-        <p>Bien implantée dans la communauté web locale, toute l’équipe participe régulièrement aux meetups et conférences sur les domaines du web.
+        <p>
+            Our team is well integrated into the local web community, everyone participates in meet-ups and conferences on web-related subjects on a regular basis.  
         </p>
 
-        <h3>Soumission du dossier</h3>
-        <p>Alors, si tu te reconnais dans cette description, contacte-nous sans tarder soit via :</p>
+        <h3>Applications via</h3>
+        
             <script type="IN/Apply"
                data-logo="http://antistatique.net/assets/img/logo-a.png"
                data-companyname="Antistatique"
@@ -89,9 +91,9 @@
                data-jobId="WEBDEV-2"
             ></script>
 
-        <p>Ou en envoyant un mail de motivation, ton CV (profil LinkedIn), l’url de ton site, ton GitHub et ton twitter par email à <a href="mailto:job@antistatique.net?subject=Je%20suis%20un%20d%C3%A9veloppeur%2C%20engagez-moi">job@antistatique.net</a>.
+        <p>Ou <a href="mailto:job@antistatique.net?subject=subject=I am a developer, hire me">job@antistatique.net</a>.
         </p>
-        <p>Les dossiers envoyés par poste ne seront pas traités.</p>
+        <p>Applications received by post will be destroyed.</p>
     </div>
 </section>
 {% endblock %}
