--- a/templates/fr/job/web-developer.html.twig
+++ b/templates/fr/job/web-developer.html.twig
@@ -67,7 +67,7 @@
         </ul>
 
         <h3>Passion du web</h3>
-        <p>Prticiper à notre veille technologique et au partage de connaissances (Rédaction d'articles du blog, présentations, animation de séminaires, etc).</p>
+        <p>Participer à notre veille technologique et au partage de connaissances (Rédaction d'articles du blog, présentations, animation de séminaires, etc).</p>
 
         <h3>Antistatique</h3>
         <p>Antistatique est une agence digitale de 7 personnes (4 développeurs, 1 designer, 1 cheffe de projet et 1 digital strategist) basée en Suisse à Lausanne.
