--- a/templates/fr/job.html.twig
+++ b/templates/fr/job.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}{{ 'job.title' | trans }}{% endblock %}
 
-{% block meta_description%}Artisans du web. Notre agence se situe à Lausanne, Suisse.{% endblock %}
+{% block meta_description%}Offres d'emploi attractif, agence digitale{% endblock %}
 
 {% block body_class %}job{% endblock %}
 
@@ -28,7 +28,7 @@
                 <h3><del>Digital project manager</del></h3>
             </li>
             <li>
-                <h3><a href="{{ path('job_show', { slug: 'web-developer' }) }}">Web Developer (80%)</a></h3>
+                <h3><a href="{{ path('job_show', { slug: 'web-developer' }) }}">Web Developer</a></h3>
             </li>
         </ul>
 
