add link to read the job offer in english

--- a/templates/fr/job/web-developer.html.twig
+++ b/templates/fr/job/web-developer.html.twig
@@ -29,6 +29,8 @@
     <div class="page-content">
         <h2>Nous cherchons un développeur Symfony pour agrandir notre équipe</h2>
 
+        <p><small><a href="{{ path('job_show', { slug: 'web-developer', _locale: 'en' }) }}">Read the job offer in english</a></small></p>
+
         <h3>Nous offrons</h3>
         <ul>
             <li>Des projets innovants et variés</li>
