--- a/templates/fr/portfolio/faceit.html.twig
+++ b/templates/fr/portfolio/faceit.html.twig
@@ -1,4 +1,4 @@
-{% extends "portfolio/base.html.twig" %}
+{% extends "fr/portfolio/base.html.twig" %}
 
 {% block title %}Medecin sans frontières - Landing page, présentation de produit, Antistatique{% endblock %}
 
