--- a/templates/fr/portfolio/richter.html.twig
+++ b/templates/fr/portfolio/richter.html.twig
@@ -1,4 +1,4 @@
-{% extends "portfolio/base.html.twig" %}
+{% extends "fr/portfolio/base.html.twig" %}
 
 {% block title %}Cas Richter - Dahl Rocha & Associés – Développement Symfony, Antistatique{% endblock %}
 
