--- a/templates/fr/portfolio/uchitomi.html.twig
+++ b/templates/fr/portfolio/uchitomi.html.twig
@@ -1,4 +1,4 @@
-{% extends "portfolio/base.html.twig" %}
+{% extends "fr/portfolio/base.html.twig" %}
 
 {% block title %}Cas Uchitomi - Design ecommerce sur Magento, Antistatique{% endblock %}
 
