--- a/templates/fr/portfolio/tehran.html.twig
+++ b/templates/fr/portfolio/tehran.html.twig
@@ -1,4 +1,4 @@
-{% extends "portfolio/base.html.twig" %}
+{% extends "fr/portfolio/base.html.twig" %}
 
 {% block title %}Cas Tehran Watch - Design et rebranding (web et print), Antistatique{% endblock %}
 
