--- a/templates/fr/portfolio/tennislausanne.html.twig
+++ b/templates/fr/portfolio/tennislausanne.html.twig
@@ -1,4 +1,4 @@
-{% extends "portfolio/base.html.twig" %}
+{% extends "fr/portfolio/base.html.twig" %}
 
 {% block title %}Club Tennis Lausanne, communication globale – Antistatique{% endblock %}
 
