digital designer is a visual designer

--- a/templates/fr/job/digital-designer.html.twig
+++ b/templates/fr/job/digital-designer.html.twig
@@ -1,8 +1,8 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}{{ 'job.title' | trans }} - Digital designer manager{% endblock %}
+{% block title %}{{ 'job.title' | trans }} - Visual designer manager{% endblock %}
 
-{% block meta_description%}Poste de digital designer en Suisse à Lausanne. Dans une chouette agence.{% endblock %}
+{% block meta_description%}Poste de visual designer en Suisse à Lausanne. Dans une chouette agence.{% endblock %}
 {% block head_scripts %}
 <script src="//platform.linkedin.com/in.js" type="text/javascript">
 api_key: lj5b50hfde72
@@ -17,7 +17,7 @@ api_key: lj5b50hfde72
     <section>
         <h1 class="title-separation magenta-sep">
             <span></span>
-            Digital designer
+            Visual designer
         </h1>
     </section>
 </div>
@@ -27,37 +27,35 @@ api_key: lj5b50hfde72
 <section>
     <div class="page-content">
         <h2>
-            Nous cherchons un Digital Designer d’exception pour agrandir notre équipe. Aimer relever les défis, comprendre les besoins des utilisateurs, penser écrans et avoir du style sont les prérequis de ce nouveau poste.
+            Nous cherchons un Visual Designer d’exception pour agrandir notre équipe. Aimer relever les défis, comprendre les besoins des utilisateurs, penser écrans et avoir du style sont les prérequis de ce nouveau poste.
         </h2>
 
         <h3>Ce que nous offrons</h3>
         <ul>
             <li>Liberté de création</li>
             <li>Une équipe technique à l’écoute</li>
-            <li>Une approche centré utilisateur</li>
             <li>Un budget pour assister à des conférences de ton choix</li>
             <li>Une équipe jeune offrant un cadre flexible et novateur</li>
         </ul>
 
         <h3>Tâches principales</h3>
         <ul>
-            <li>Graphisme, ergonomie et connaissance des contraintes techniques</li>
             <li>Comprendre et transcrire les attentes du client</li>
             <li>Réaliser les wireframes</li>
             <li>Analyser et rechercher des solutions graphiques</li>
             <li>Réaliser les maquettes web (Site Internet - E-commerce - Application mobile)</li>
-            <li>Diviser et créer des composants graphiques</li>
-            <li>Coder la base des maquettes en HTML/CSS </li>
+            <li>Coder la base des maquettes en HTML/CSS (CSS styleguide)</li>
             <li>Contribuer à l'évolution artistique de l'agence</li>
-            <li>Élaboration de solutions en collaboration avec l’équipe technique</li>
         </ul>
 
         <h3>Profil du candidat idéal</h3>
         <ul>
+            <li>Graphiste web, conscience et connaissance de l'ergonomie et des contraintes techniques</li>
             <li>Formation dans un domaine artistique, diplôme universitaire ou HES</li>
             <li>Expérience de minimum 2 ans dans le graphisme digital, si possible design de e-commerce et application mobile</li>
             <li>Personne méthodique, rigoureuse et organisée ayant un sens de l’écoute et du service client</li>
-            <li>Aptitude à travailler en équipe avec des développeurs front-end</li>
+            <li>Aptitude à travailler en équipe avec des développeurs</li>
+            <li>Avoir une approche centrée utilisateurs</li>
             <li>Avoir lu un des livres de Steve Krug</li>
             <li>Excellente maîtrise de l’anglais</li>
             <li>Excellente maîtrise du tennis de table, un vrai plus</li>
@@ -81,7 +79,7 @@ api_key: lj5b50hfde72
         data-logo="http://antistatique.net/assets/img/logo-a.png"
         data-themeColor="#d40b6b"
         data-companyname="Antistatique"
-        data-jobtitle="Digital Designer"
+        data-jobtitle="Visual Designer"
         data-joblocation="Lausanne, Switzerland"
         data-phone="required"
         data-coverLetter="optional"
@@ -89,7 +87,7 @@ api_key: lj5b50hfde72
         data-jobId="PROJECT-1"
         ></script>
 
-        <p>Ou en envoyant un mail de motivation, ton CV (profil LinkedIn), l’url de ton site, ton twitter par email à <a href="mailto:job@antistatique.net?subject=Candidature%20Digital%20Designer">job@antistatique.net</a>.
+        <p>Ou en envoyant un mail de motivation, ton CV (profil LinkedIn), l’url de ton site, ton twitter par email à <a href="mailto:job@antistatique.net?subject=Candidature%20Visual%20Designer">job@antistatique.net</a>.
         </p>
         <p>Les dossiers envoyés par poste ne seront pas traités.</p>
     </div>
