add saniha on team page

--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -136,6 +136,16 @@
                 </p>
             </div>
         </div>
+        <div class="member">
+            <div class="photo"><img src="/assets/img/team/som.png"></div>
+            <div class="description">
+                <h4>Saniha Ozem</h4>
+                <p>Web Project Manager</p>
+                <p class="social-links">
+                    <a class="mail" href="mailto:saniha@antistatique.net"><span class="icon">m</span>saniha@antistatique.net</a>
+                </p>
+            </div>
+        </div>
         <div class="member you">
             <div class="photo"><img src="/assets/img/team/play.png"></div>
             <div class="description">
