add hashtagelectrosanne in works

--- a/assets/css/antistatique.css
+++ b/assets/css/antistatique.css
@@ -1094,6 +1094,9 @@ footer a {
 .works #faceit {
   background-image: url(../img/portfolio-msf.png);
 }
+.works #electrosanne {
+  background-image: url(../img/portfolio-electrosanne.jpg);
+}
 /*
 # icons
 
