--- a/assets/less/module-works.less
+++ b/assets/less/module-works.less
@@ -60,6 +60,9 @@
   #faceit{
     background-image: url(../img/portfolio-msf.png);
   }
+  #electrosanne{
+    background-image: url(../img/portfolio-electrosanne.jpg);
+  }
 }
 
 /*
