--- a/assets/less/util.less
+++ b/assets/less/util.less
@@ -40,7 +40,10 @@
   -transition:all @timing ease-in-out;
 }
 
-
+.isolated{
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
 // Visibility utilities
 
 // For desktops
