--- a/templates/fr/contact.html.twig
+++ b/templates/fr/contact.html.twig
@@ -41,7 +41,7 @@
             </div>
             {% include '_sidebar_contact.html.twig' %}
         </aside>
-        <article>
+        <article class="isolated">
             <h2 class="title-separation">
                 <span></span>
                 Notre Agence se trouve à Lausanne
