--- a/templates/fr/index.html.twig
+++ b/templates/fr/index.html.twig
@@ -68,7 +68,7 @@
                 </div>
                 {% include '_sidebar_contact.html.twig' %}
             </aside>
-            <article id="our-mission">
+            <article id="our-mission" class="isolated">
                 <h1 class="title-separation long-sep">
                     <span></span>
                     {{ 'antistatique.mission.title' | trans }}
