hgref is not href typo

--- a/templates/fr/portfolio/derham.html.twig
+++ b/templates/fr/portfolio/derham.html.twig
@@ -118,7 +118,7 @@
 
       <h2>UX, personas, architecture de l'information</h2>
 
-      <p>La phase de réflexion s’est faite en partenariat avec <a hreg="http://8ratio.ch/">:ratio</a> afin de définir une série de personas ainsi que de penser l’arborescence globale du site. La création de wireframes permet d’élaborer une répartition des différentes zones de contenu et d’établir une architecture de l’information.</p>
+      <p>La phase de réflexion s’est faite en partenariat avec <a href="http://8ratio.ch/">:ratio</a> afin de définir une série de personas ainsi que de penser l’arborescence globale du site. La création de wireframes permet d’élaborer une répartition des différentes zones de contenu et d’établir une architecture de l’information.</p>
 
       <p>Par la suite, les tests utilisateurs permettent d’affirmer ou de rectifier les décisions prises lors de la phase de réflexion. Ils mettent aussi en lumières des éléments qui n’auraient pas été pris en compte. Cette phase d’analyse passe également par l’étude des statistiques liées au site actuel, permettant également de mettre l’accent sur des éléments perfectibles ou à repenser totalement.</p>
 
