--- a/templates/fr/portfolio/faceit.html.twig
+++ b/templates/fr/portfolio/faceit.html.twig
@@ -5,8 +5,8 @@
 {% block body_class %}{{ parent() }} faceit{% endblock %}
 
 
-{% block previous_work %}{{ 'homepage.work.tennislausanne.title' | trans }}{% endblock %}
-{% block previous_link %}{{ path('portfolio_show', { slug: 'tennislausanne' }) }}{% endblock %}
+{% block previous_work %}{{ 'homepage.work.electrosanne.title' | trans }}{% endblock %}
+{% block previous_link %}{{ path('portfolio_show', { slug: 'electrosanne' }) }}{% endblock %}
 {% block next_work %}{{ 'homepage.work.urturn.title' | trans }}{% endblock %}
 {% block next_link %}{{ path('portfolio_show', { slug: 'urturn' }) }}{% endblock %}
 
