--- a/templates/fr/portfolio/tennislausanne.html.twig
+++ b/templates/fr/portfolio/tennislausanne.html.twig
@@ -7,8 +7,8 @@
 
 {% block previous_work %}{{ 'homepage.work.uchitomi.title' | trans }}{% endblock %}
 {% block previous_link %}{{ path('portfolio_show', { slug: 'uchitomi' }) }}{% endblock %}
-{% block next_work %}{{ 'homepage.work.faceit.title' | trans }}{% endblock %}
-{% block next_link %}{{ path('portfolio_show', { slug: 'faceit' }) }}{% endblock %}
+{% block next_work %}{{ 'homepage.work.electrosanne.title' | trans }}{% endblock %}
+{% block next_link %}{{ path('portfolio_show', { slug: 'electrosanne' }) }}{% endblock %}
 
 {% block baseline %}
 <div class="baseline-space"></div>
