--- a/assets/less/module-works.less
+++ b/assets/less/module-works.less
@@ -63,6 +63,9 @@
   #electrosanne{
     background-image: url(../img/portfolio-electrosanne.jpg);
   }
+  #ehl{
+    background-image: url(../img/portfolio-ehl.jpg);
+  }
 }
 
 /*
