--- a/assets/css/antistatique.css
+++ b/assets/css/antistatique.css
@@ -1101,6 +1101,9 @@ footer a {
 .works #electrosanne {
   background-image: url(../img/portfolio-electrosanne.jpg);
 }
+.works #ehl {
+  background-image: url(../img/portfolio-ehl.jpg);
+}
 /*
 # icons
 
