--- a/templates/fr/index.html.twig
+++ b/templates/fr/index.html.twig
@@ -23,6 +23,15 @@
             {{ 'homepage.work.title' | trans }}
         </h3>
         <div class="works">
+            <a id="ehl" href="{{ path('portfolio_show', { slug: 'ehl' }) }}">
+                <hgroup>
+                    <h3>{{ 'homepage.work.ehl.title' | trans }}</h3>
+                    <h5 class="title-separation x-long-sep magenta-sep">
+                        <span></span>
+                        {{ 'homepage.work.ehl.baseline' | trans }}
+                    </h5>
+                </hgroup>
+            </a>
             <a id="electrosanne" href="{{ path('portfolio_show', { slug: 'electrosanne' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.electrosanne.title' | trans }}</h3>
@@ -32,21 +41,12 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="faceit" href="{{ path('portfolio_show', { slug: 'faceit' }) }}">
+            <a id="faceit" href="{{ path('portfolio_show', { slug: 'faceit' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.faceit.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
                         <span></span>
                         {{ 'homepage.work.faceit.baseline' | trans }}
-                    </h5>
-                </hgroup>
-            </a>
-            <a id="urturn" href="{{ path('portfolio_show', { slug: 'urturn' }) }}" class="last">
-                <hgroup>
-                    <h3>{{ 'homepage.work.urturn.title' | trans }}</h3>
-                    <h5 class="title-separation x-long-sep magenta-sep">
-                        <span></span>
-                        {{ 'homepage.work.urturn.baseline' | trans }}
                     </h5>
                 </hgroup>
             </a>
