--- a/templates/fr/portfolio.html.twig
+++ b/templates/fr/portfolio.html.twig
@@ -24,6 +24,15 @@
             {{ 'homepage.work.title' | trans }}
         </h3>
         <div class="works">
+            <a id="courtierspartenaires" href="{{ path('portfolio_show', { slug: 'courtierspartenaires' }) }}">
+                <hgroup>
+                    <h3>{{ 'homepage.work.courtierspartenaires.title' | trans }}</h3>
+                    <h5 class="title-separation x-long-sep magenta-sep">
+                        <span></span>
+                        {{ 'homepage.work.courtierspartenaires.baseline' | trans }}
+                    </h5>
+                </hgroup>
+            </a>
             <a id="ehl" href="{{ path('portfolio_show', { slug: 'ehl' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.ehl.title' | trans }}</h3>
@@ -33,7 +42,7 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="electrosanne" href="{{ path('portfolio_show', { slug: 'electrosanne' }) }}">
+            <a id="electrosanne" href="{{ path('portfolio_show', { slug: 'electrosanne' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.electrosanne.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -42,7 +51,9 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="faceit" href="{{ path('portfolio_show', { slug: 'faceit' }) }}" class="last">
+        </div>
+        <div class="works">
+            <a id="faceit" href="{{ path('portfolio_show', { slug: 'faceit' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.faceit.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -51,8 +62,6 @@
                     </h5>
                 </hgroup>
             </a>
-        </div>
-        <div class="works">
             <a id="urturn" href="{{ path('portfolio_show', { slug: 'urturn' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.urturn.title' | trans }}</h3>
@@ -62,7 +71,7 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="tennislausanne" href="{{ path('portfolio_show', { slug: 'tennislausanne' }) }}">
+            <a id="tennislausanne" href="{{ path('portfolio_show', { slug: 'tennislausanne' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.tennislausanne.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -71,7 +80,9 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="derham" href="{{ path('portfolio_show', { slug: 'derham' }) }}" class="last">
+        </div>
+        <div class="works">
+            <a id="derham" href="{{ path('portfolio_show', { slug: 'derham' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.derham.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -80,8 +91,6 @@
                     </h5>
                 </hgroup>
             </a>
-        </div>
-        <div class="works">
             <a id="uchitomi" href="{{ path('portfolio_show', { slug: 'uchitomi' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.uchitomi.title' | trans }}</h3>
@@ -91,7 +100,7 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="rdr" href="{{ path('portfolio_show', { slug: 'richter' }) }}">
+            <a id="rdr" href="{{ path('portfolio_show', { slug: 'richter' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.rdr.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -100,7 +109,9 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="tw" href="{{ path('portfolio_show', { slug: 'tehran' }) }}" class="last">
+        </div>
+        <div class="works">
+            <a id="tw" href="{{ path('portfolio_show', { slug: 'tehran' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.tehran.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
