--- a/assets/css/antistatique.css
+++ b/assets/css/antistatique.css
@@ -1104,6 +1104,9 @@ footer a {
 .works #ehl {
   background-image: url(../img/portfolio-ehl.jpg);
 }
+.works #courtierspartenaires {
+  background-image: url(../img/portfolio-courtierspartenaires.jpg);
+}
 /*
 # icons
 
