--- a/assets/less/module-works.less
+++ b/assets/less/module-works.less
@@ -66,6 +66,9 @@
   #ehl{
     background-image: url(../img/portfolio-ehl.jpg);
   }
+  #courtierspartenaires{
+    background-image: url(../img/portfolio-courtierspartenaires.jpg);
+  }
 }
 
 /*
