--- a/templates/fr/index.html.twig
+++ b/templates/fr/index.html.twig
@@ -23,6 +23,15 @@
             {{ 'homepage.work.title' | trans }}
         </h3>
         <div class="works">
+            <a id="courtierspartenaires" href="{{ path('portfolio_show', { slug: 'courtierspartenaires' }) }}" class="last">
+                <hgroup>
+                    <h3>{{ 'homepage.work.courtierspartenaires.title' | trans }}</h3>
+                    <h5 class="title-separation x-long-sep magenta-sep">
+                        <span></span>
+                        {{ 'homepage.work.courtierspartenaires.baseline' | trans }}
+                    </h5>
+                </hgroup>
+            </a>
             <a id="ehl" href="{{ path('portfolio_show', { slug: 'ehl' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.ehl.title' | trans }}</h3>
@@ -38,15 +47,6 @@
                     <h5 class="title-separation x-long-sep magenta-sep">
                         <span></span>
                         {{ 'homepage.work.electrosanne.baseline' | trans }}
-                    </h5>
-                </hgroup>
-            </a>
-            <a id="faceit" href="{{ path('portfolio_show', { slug: 'faceit' }) }}" class="last">
-                <hgroup>
-                    <h3>{{ 'homepage.work.faceit.title' | trans }}</h3>
-                    <h5 class="title-separation x-long-sep magenta-sep">
-                        <span></span>
-                        {{ 'homepage.work.faceit.baseline' | trans }}
                     </h5>
                 </hgroup>
             </a>
