401 access not authorised

--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -3,9 +3,9 @@
 // AS Colors
 @black:                 #333333;
 @white:                 #ffffff;
-@magenta:               #d40b6b;
-@magentaHover:          #b50a5d;
-@vieuxRose:             #eed2da;
+@magenta:               #111;//#d40b6b
+@magentaHover:          #333;//#b50a5d
+@vieuxRose:             #eee;
 @green:                 #30a530;
 @red:                   #a6191d;
 @black80:               #cccccc;
