--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -146,6 +146,19 @@
                 </p>
             </div>
         </div>
+        <div class="member">
+            <div class="photo"><img src="http://lorempixel.com/output/abstract-h-g-250-300-4.jpg"></div>
+            <div class="description">
+                <h4>Stefano Sala</h4>
+                <p>Web Software Developer</p>
+                <p class="social-links">
+                    <a class="twitter" href="http://www.twitter.com/stefanosala"><span class="icon">T</span>@stefanosala</a>
+                    <a class="mail" href="mailto:stefano@antistatique.net"><span class="icon">m</span>stefano@antistatique.net</a>
+                    <a class="github" href="https://github.com/stewe"><span class="icon">O</span>stewe</a>
+                    <a class="linkedin" href="http://linkedin.com/in/stefanosala"><span class="icon">L</span>LinkedIn</a>
+                </p>
+            </div>
+        </div>
         <div class="member you">
             <div class="photo"><img src="/assets/img/team/play.png"></div>
             <div class="description">
