--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -146,6 +146,19 @@
                 </p>
             </div>
         </div>
+        <div class="member">
+            <div class="photo"><img src="/assets/img/team/dmt.png"></div>
+            <div class="description">
+                <h4>Damien Magnenat</h4>
+                <p>Technical Project Manager</p>
+                <p class="social-links">
+                    <a class="twitter" href="http://www.twitter.com/DamienMagnenat"><span class="icon">T</span>@DamienMagnenat</a>
+                    <a class="mail" href="mailto:damien@antistatique.net"><span class="icon">m</span>damien@antistatique.net</a>
+                    <a class="linkedin" href="http://ch.linkedin.com/in/damienmagnenat/"><span class="icon">L</span>LinkedIn</a>
+                    <a class="github" href="https://github.com/DamienMagnenat"><span class="icon">O</span>DamienMagnenat</a>
+                </p>
+            </div>
+        </div>
         <div class="member you">
             <div class="photo"><img src="/assets/img/team/play.png"></div>
             <div class="description">
