--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -26,7 +26,7 @@
                 <h2>Nous sommes des artisans du web. Notre agence se situe à <a href="http://www.lausanne.ch" title="Le paysage est tout de même plus joli que le site web">Lausanne</a>, Suisse.</h2>
             </aside>
             <article>
-                
+
                 <h3>
                     Comment travaillons-nous au quotidien ?
                 </h3>
@@ -54,7 +54,7 @@
                 <h3>Nous sommes des gens qui aimons faire, et bien faire.</h3>
                 <p>
                     Par artisans, nous entendons que nous relevons nos manches et mettons la main à la pâte pour obtenir un résultat qui vous aidera réellement. <br/>Chaque pixel, chaque ligne de code, chaque zone de texte compte pour nous.
-                    
+
                 </p>
             </article>
         </div>
@@ -106,7 +106,7 @@
                 <p class="social-links">
                     <a class="twitter" href="http://twitter.com/_20_cents"><span class="icon">T</span>@_20_cents</a>
                     <a class="mail" href="mailto:vincent@antistatique.net"><span class="icon">m</span>vincent@antistatique.net</a>
-                    <a class="linkedin" href="http://ch.linkedin.com/pub/vincent-gschwindemann/"><span class="icon">L</span>LinkedIn</a>
+                    <a class="linkedin" href="http://ch.linkedin.com/pub/vincent-gschwindemann/15/376/b59"><span class="icon">L</span>LinkedIn</a>
                 </p>
             </div>
         </div>
@@ -118,7 +118,7 @@
                 <p class="social-links">
                     <a class="twitter" href="http://www.twitter.com/Yago_0"><span class="icon">T</span>@Yago_0</a>
                     <a class="mail" href="mailto:yann@antistatique.net"><span class="icon">m</span>yann@antistatique.net</a>
-                    <a class="linkedin" href="http://ch.linkedin.com/in/yann-gouffon"><span class="icon">L</span>LinkedIn</a>
+                    <a class="linkedin" href="http://ch.linkedin.com/pub/yann-gouffon/47/9a0/9bb/"><span class="icon">L</span>LinkedIn</a>
                     <a class="github" href="https://github.com/yago31"><span class="icon">O</span>yago31</a>
                 </p>
             </div>
@@ -150,6 +150,18 @@
             </div>
         </div>
         <div class="member">
+            <div class="photo"><img src="/assets/img/team/phm.png"></div>
+            <div class="description">
+                <h4>Philippe Heim</h4>
+                <p>Digital Strategist</p>
+                <p class="social-links">
+                    <a class="mail" href="mailto:philippe@antistatique.net"><span class="icon">m</span>philippe@antistatique.net</a>
+                    <a class="linkedin" href="http://ch.linkedin.com/pub/philippe-heim/43/208/368/en"><span class="icon">L</span>LinkedIn</a>
+                    <a class="facebook" href="https://www.facebook.com/Eevyph"><span class="icon">F</span>Facebook</a>
+                </p>
+            </div>
+        </div>
+        <div class="member">
             <div class="photo"><img src="/assets/img/team/som.png"></div>
             <div class="description">
                 <h4>Saniha Ozem</h4>
@@ -169,6 +181,19 @@
                     <a class="mail" href="mailto:damien@antistatique.net"><span class="icon">m</span>damien@antistatique.net</a>
                     <a class="linkedin" href="http://ch.linkedin.com/in/damienmagnenat/"><span class="icon">L</span>LinkedIn</a>
                     <a class="github" href="https://github.com/DamienMagnenat"><span class="icon">O</span>DamienMagnenat</a>
+                </p>
+            </div>
+        </div>
+        <div class="member">
+            <div class="photo"><img src="/assets/img/team/tfr.png"></div>
+            <div class="description">
+                <h4>Toni Fisler</h4>
+                <p>Frontend Web Developer</p>
+                <p class="social-links">
+                    <a class="twitter" href="http://www.twitter.com/tonifisler"><span class="icon">T</span>@tonifisler</a>
+                    <a class="mail" href="mailto:toni@antistatique.net"><span class="icon">m</span>toni@antistatique.net</a>
+                    <a class="linkedin" href="http://www.linkedin.com/pub/toni-fisler/21/373/709"><span class="icon">L</span>LinkedIn</a>
+                    <a class="github" href="https://github.com/tonifisler"><span class="icon">O</span>tonifisler</a>
                 </p>
             </div>
         </div>
