--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -185,10 +185,21 @@
             </div>
         </div>
         <div class="member">
+            <div class="photo"><img src="/assets/img/team/smi.png"></div>
+            <div class="description">
+                <h4>Sepehr Milani</h4>
+                <p>Junior Visual Designer</p>
+                <p class="social-links">
+                    <a class="mail" href="mailto:sepehr@antistatique.net"><span class="icon">m</span>sepehr@antistatique.net</a>
+                    <a class="linkedin" href="http://ch.linkedin.com/pub/sepehr-milani/68/2a3/6b5"><span class="icon">L</span>LinkedIn</a>
+                </p>
+            </div>
+        </div>
+        <div class="member">
             <div class="photo"><img src="/assets/img/team/tfr.png"></div>
             <div class="description">
                 <h4>Toni Fisler</h4>
-                <p>Frontend Web Developer</p>
+                <p>Junior Frontend Web Developer</p>
                 <p class="social-links">
                     <a class="twitter" href="http://www.twitter.com/tonifisler"><span class="icon">T</span>@tonifisler</a>
                     <a class="mail" href="mailto:toni@antistatique.net"><span class="icon">m</span>toni@antistatique.net</a>
