Change job offers

--- a/templates/fr/job.html.twig
+++ b/templates/fr/job.html.twig
@@ -28,10 +28,10 @@
                 <h3><del>Digital project manager</del></h3>
             </li>
             <li>
-                <h3><a href="{{ path('job_show', { slug: 'web-developer' }) }}">Web Developer</a></h3>
+                <h3><del>Web Developer</del></h3>
             </li>
             <li>
-                <h3><a href="{{ path('job_show', { slug: 'digital-designer' }) }}">Visual Designer</a></h3>
+                <h3><del>Visual Designer</del></h3>
             </li>
         </ul>
 
