--- a/templates/en/job.html.twig
+++ b/templates/en/job.html.twig
@@ -28,7 +28,7 @@
                 <h3><del>Digital project manager</del></h3>
             </li>
             <li>
-                <h3><a href="{{ path('job_show', { slug: 'web-developer' }) }}">Web Developer</a></h3>
+                <h3><del>Web Developer</del/></h3>
             </li>
         </ul>
 
