--- a/templates/fr/job/web-developer.html.twig
+++ b/templates/fr/job/web-developer.html.twig
@@ -27,6 +27,7 @@
 {% block content %}
 <section>
     <div class="page-content">
+        <h2>Nous avons trouvé la perle rare, le poste n'est plus à pourvoir. Merci à tous !</h2>
         <h2>Nous cherchons un développeur Symfony pour agrandir notre équipe</h2>
 
         <p><small><a href="{{ path('job_show', { slug: 'web-developer', _locale: 'en' }) }}">Read the job offer in english</a></small></p>
