add Twitter link to Philippe

--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -155,6 +155,7 @@
                 <h4>Philippe Heim</h4>
                 <p>Digital Strategist</p>
                 <p class="social-links">
+                    <a class="twitter" href="http://www.twitter.com/eevy_philip"><span class="icon">T</span>@eevy_philip</a>
                     <a class="mail" href="mailto:philippe@antistatique.net"><span class="icon">m</span>philippe@antistatique.net</a>
                     <a class="linkedin" href="http://ch.linkedin.com/pub/philippe-heim/43/208/368/en"><span class="icon">L</span>LinkedIn</a>
                     <a class="facebook" href="https://www.facebook.com/Eevyph"><span class="icon">F</span>Facebook</a>
