Update my link to github
I changed the username as I didn't like stewe anymore :)

--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -144,7 +144,7 @@
                 <p class="social-links">
                     <a class="twitter" href="http://www.twitter.com/stefanosala"><span class="icon">T</span>@stefanosala</a>
                     <a class="mail" href="mailto:stefano@antistatique.net"><span class="icon">m</span>stefano@antistatique.net</a>
-                    <a class="github" href="https://github.com/stewe"><span class="icon">O</span>stewe</a>
+                    <a class="github" href="https://github.com/stefanosala"><span class="icon">O</span>stefanosala</a>
                     <a class="linkedin" href="http://linkedin.com/in/stefanosala"><span class="icon">L</span>LinkedIn</a>
                 </p>
             </div>
