fix grammar on team page

--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -23,14 +23,14 @@
     <div id="intro">
         <div class="with-aside">
             <aside>
-                <h2>Antistatique est une entreprise de passionés du web. Notre agence se situe à <a href="http://www.lausanne.ch" title="Le paysage est tout de même plus joli que le site web">Lausanne</a>, Suisse.</h2>
+                <h2>Antistatique est une entreprise de passionnés du web. Notre agence se situe à <a href="http://www.lausanne.ch" title="Le paysage est tout de même plus joli que le site web">Lausanne</a>, Suisse.</h2>
             </aside>
             <article>
                 <h3>
                     Comment travaillons-nous au quotidien ?
                 </h3>
                 <p>
-                    Nous pratiquons le développement par itération. Nous faisons le point le plus souvent possible avec vous, pour affiner nos solutions à vos problèmes. Nous aimons promouvoir les notions d'hygiène du code et de développement durable et future friendly.
+                    Nous pratiquons le développement par itération. Nous faisons le point le plus souvent possible avec vous, pour affiner nos solutions de façon à les adapter à vos problèmes. Nous aimons promouvoir les notions d'hygiène du code et de développement durable et future friendly.
                 </p>
                 <p>
                     Nous travaillons avec ceux qui ont une vision à long terme et qui affectionnent l'analyse précise basée sur des statistiques, des faits et des tests utilisateurs. Nous construisons avec nos clients un partenariat sur la durée. Nous aimons les détails pointus autant que la perspective générale.<br/>
@@ -47,7 +47,7 @@
                     <span></span>
                     Services
                 </h1>
-                <p>Nous développons des solutions web pour nos clients. Ces réalisations sont des sites et applications web fonctionnant parfaitement sur navigateurs, tablettes et smartphones. Ces réalisations sont centrées sur les besoins de l'utilisateur, ceci de la stratégie à la publication.</p>
+                <p>Nous développons des solutions web pour nos clients. Ces réalisations sont des sites et applications web fonctionnant parfaitement sur navigateurs, tablettes et smartphones. Ces réalisations sont centrées sur les besoins de l'utilisateur, et ceci de la stratégie à la publication.</p>
                 <ul>
                     <li>Stratégies digitales</li>
                     <li>Applications web et web mobile</li>
@@ -60,15 +60,15 @@
                     Stratégie
                 </h3>
                 <p>
-                    À la base de tous projets, la stratégie défini les moyens pour atteindre vos objectifs. Nous vous proposons des solutions innovantes et originales pour retenir l'attention de votre public cible.
+                    À la base de tout projet, la stratégie définit les moyens pour atteindre vos objectifs. Nous vous proposons des solutions innovantes et originales pour retenir l'attention de votre public cible.
                 </p>
-                <p><strong>Stratégie digitale (rapport ou présentation), Concept de communication, analyse de marché.</strong></p>
+                <p><strong>Stratégie digitale (rapport ou présentation), concept de communication, analyse de marché.</strong></p>
                 <h3 class="title-separation magenta-sep">
                     <span></span>
                    Design centré utilisateur
                 </h3>
                 <p>
-                    Penser à l'utilisateur c'est enticiper ses réactions et améliorer son expérience. L'objectif est qu'il garde le sourire en obtenant l'information qu'il cherche.
+                    Penser à l'utilisateur c'est anticiper ses réactions et améliorer son expérience. L'objectif est qu'il garde le sourire en obtenant l'information qu'il cherche.
                 </p>
                 <p><strong>Architecture, prototype, résumé des tests utilisateurs, processus de navigation.</strong></p>
                 <h3 class="title-separation magenta-sep">
@@ -76,7 +76,7 @@
                     Design visuel
                 </h3>
                 <p>
-                    L'identité de marque et l'émotion que transmet votre projet/entreprise sont l'expértise de nos graphistes web.
+                    L'identité de marque et l'émotion que transmet votre projet/entreprise sont l'expertise de nos graphistes web.
                 </p>
                 <p><strong>Digital branding, moodboard, maquettes, corporate, signalétique, styleguide dynamique.</strong></p>
                 <h3 class="title-separation magenta-sep">
@@ -86,13 +86,13 @@
                 <p>
                     Coeur du système, le développement doit être performant, utile, propre et permettre d'améliorer la vie des utilisateurs du logiciel.
                 </p>
-                <p><strong>Application web, application mobile, site ecommerce, newsletters.</strong></p>
+                <p><strong>Application web, application mobile, site E-commerce, newsletters.</strong></p>
                 <h3 class="title-separation magenta-sep">
                     <span></span>
                     Formation / Accompagnement
                 </h3>
                 <p>
-                    Nous sommes à vos coté et disponible tout au long du projet. Nos conditions cadres de maintenance nous permettent d'être disponbile pour les urgences et le support.
+                    Nous sommes à vos côtés et restons disponibles tout au long du projet. Notre politique de support et de maintenance vous assure un suivi lors des urgences ou besoins d'assistance.
                 </p>
                 <p><strong>Formations, présentations.</strong></p>
                 <h3 class="title-separation magenta-sep">
@@ -120,7 +120,6 @@
                 <h3>Nous sommes des gens qui aimons faire, et bien faire.</h3>
                 <p>
                     Par artisans, nous entendons que nous relevons nos manches et mettons la main à la pâte pour obtenir un résultat qui vous aidera réellement. <br/>Chaque pixel, chaque ligne de code, chaque zone de texte compte pour nous.
-
                 </p>
             </article>
         </div>
