--- a/templates/fr/index.html.twig
+++ b/templates/fr/index.html.twig
@@ -23,7 +23,16 @@
             {{ 'homepage.work.title' | trans }}
         </h3>
         <div class="works">
-            <a id="courtierspartenaires" href="{{ path('portfolio_show', { slug: 'courtierspartenaires' }) }}" class="last">
+            <a id="billetlemillion" href="{{ path('portfolio_show', { slug: 'billetlemillion' }) }}">
+                <hgroup>
+                    <h3>{{ 'homepage.work.billetlemillion.title' | trans }}</h3>
+                    <h5 class="title-separation x-long-sep magenta-sep">
+                        <span></span>
+                        {{ 'homepage.work.billetlemillion.baseline' | trans }}
+                    </h5>
+                </hgroup>
+            </a>
+            <a id="courtierspartenaires" href="{{ path('portfolio_show', { slug: 'courtierspartenaires' }) }}">
                 <hgroup>
                     <h3>{{ 'homepage.work.courtierspartenaires.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
@@ -32,21 +41,12 @@
                     </h5>
                 </hgroup>
             </a>
-            <a id="ehl" href="{{ path('portfolio_show', { slug: 'ehl' }) }}">
+            <a id="ehl" href="{{ path('portfolio_show', { slug: 'ehl' }) }}" class="last">
                 <hgroup>
                     <h3>{{ 'homepage.work.ehl.title' | trans }}</h3>
                     <h5 class="title-separation x-long-sep magenta-sep">
                         <span></span>
                         {{ 'homepage.work.ehl.baseline' | trans }}
-                    </h5>
-                </hgroup>
-            </a>
-            <a id="electrosanne" href="{{ path('portfolio_show', { slug: 'electrosanne' }) }}">
-                <hgroup>
-                    <h3>{{ 'homepage.work.electrosanne.title' | trans }}</h3>
-                    <h5 class="title-separation x-long-sep magenta-sep">
-                        <span></span>
-                        {{ 'homepage.work.electrosanne.baseline' | trans }}
                     </h5>
                 </hgroup>
             </a>
