--- a/templates/fr/portfolio/courtierspartenaires.html.twig
+++ b/templates/fr/portfolio/courtierspartenaires.html.twig
@@ -5,8 +5,8 @@
 {% block body_class %}{{ parent() }} ehl{% endblock %}
 
 
-{% block previous_work %}{{ 'homepage.work.tennislausanne.title' | trans }}{% endblock %}
-{% block previous_link %}{{ path('portfolio_show', { slug: 'tennislausanne' }) }}{% endblock %}
+{% block previous_work %}{{ 'homepage.work.billetlemillion.title' | trans }}{% endblock %}
+{% block previous_link %}{{ path('portfolio_show', { slug: 'billetlemillion' }) }}{% endblock %}
 {% block next_work %}{{ 'homepage.work.ehl.title' | trans }}{% endblock %}
 {% block next_link %}{{ path('portfolio_show', { slug: 'ehl' }) }}{% endblock %}
 
