add Pierre Etoile

--- a/assets/css/antistatique.css
+++ b/assets/css/antistatique.css
@@ -1107,6 +1107,12 @@ footer a {
 .works #courtierspartenaires {
   background-image: url(../img/portfolio-courtierspartenaires.jpg);
 }
+.works #billetlemillion {
+  background-image: url(../img/portfolio-billetlemillion.jpg);
+}
+.works #pierreetoile {
+  background-image: url(../img/portfolio-pierreetoile.jpg);
+}
 /*
 # icons
 
