--- a/templates/fr/portfolio/billetlemillion.html.twig
+++ b/templates/fr/portfolio/billetlemillion.html.twig
@@ -5,8 +5,8 @@
 {% block body_class %}{{ parent() }} billetlemillion{% endblock %}
 
 
-{% block previous_work %}{{ 'homepage.work.tennislausanne.title' | trans }}{% endblock %}
-{% block previous_link %}{{ path('portfolio_show', { slug: 'tennislausanne' }) }}{% endblock %}
+{% block previous_work %}{{ 'homepage.work.pierreetoile.title' | trans }}{% endblock %}
+{% block previous_link %}{{ path('portfolio_show', { slug: 'pierreetoile' }) }}{% endblock %}
 {% block next_work %}{{ 'homepage.work.courtierspartenaires.title' | trans }}{% endblock %}
 {% block next_link %}{{ path('portfolio_show', { slug: 'courtierspartenaires' }) }}{% endblock %}
 
